updated resume.html file from rough outline to working document

--- a/resume.html
+++ b/resume.html
@@ -8,25 +8,47 @@
 </head>
 
 <body>
-	Katherine Mimmack
+	<h1>Resume | Katherine Mimmack</h1>
 
-	Education:
-	Tufts University BS Computer Science expected May 2018
+	<h2>Education</h2>
+	<p>Tufts University, BS Computer Science expected May 2018</p>
 
-	Relevant Coursework:
-	Introduction to Computer Science, Data Structures, Web Design
+	<h2>Relevant Coursework</h2>
+	<p>
+		<ul>
+			<li>Introduction to Computer Science</li>
+			<li>Data Structures</li>
+			<li>Web Design</li>
+		</ul>
+	</p>
 
-	Professional Experience:
-	((Bullet pts here))
-	Data Entry and Office Assistant at Tufts University, Medford, MA, Oct 2014 – May 2015
-	Created a searchable database of over 40,000 administrative records
+	<h2>Professional Experience</h2>
+	<p>
+		<ul>
+			<li>Data Entry and Office Assistant at Tufts University, Medford, MA, Oct 2014 - May 2015
+				<br />
+			Created a searchable database of over 40,000 administrative records.</li>
+		</ul>
+	</p>
 
-	Skills:
-	C++, HTML, CSS, Adobe Creative Suite
+	<h2>Skills</h2>
+	<p>
+		<ul>
+			<li>C++</li>
+			<li>HTML</li>
+			<li>CSS</li>
+			<li>Adobe Creative Suite</li>
+		</ul>
+	</p>
 
-	Activities:
-	Web and Design Assistant - Tufts Observer Magazine Jan 2015 – Present
-	Managing the publication's website and designing layouts, icons, and graphics for both print and web.
+	<h2>Activities</h2>
+	<p>
+		<ul>
+			<li>Web and Design Assistant at the Tufts Observer Magazine, Jan 2015 - Present
+				<br />
+			Managing the publication's website and designing layouts, icons, and graphics for both print and web.</li>
+		</ul>
+	</p>
 </body>
 
 </html>
