changed formal name to nickname

--- a/resume.html
+++ b/resume.html
@@ -4,11 +4,11 @@
 <!-- Resume File -->
 
 <head>
-	<title>Resume | Katherine Mimmack</title>
+	<title>Resume | Kayden Mimmack</title>
 </head>
 
 <body>
-	<h1>Resume | Katherine Mimmack</h1>
+	<h1>Resume | Kayden Mimmack</h1>
 
 	<h2>Education</h2>
 	<p>Tufts University, BS Computer Science expected May 2018</p>
