wrote index file and added image of potrait

--- a/index.html
+++ b/index.html
@@ -3,4 +3,23 @@
 
 <!-- Biography File -->
 
+<head>
+	<title>Index | Kayden Mimmack</title>
+</head>
+
+<body>
+	<h1>Kayden Mimmack</h1>
+
+	<img src="portrait.png" alt="Portrait of Self" />
+
+	<p> 
+		<a href="resume.html">Resume</a>
+	</p>
+
+	<p> 
+		<a href="bio.html">Biography</a>
+	</p>
+
+</body>
+
 </html>
