--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,8 @@
 
 <head>
 	<title>Resume | Kayden Mimmack</title>
+	<meta charset="utf-8" />
+	<link href="style.css" rel="stylesheet" />
 </head>
 
 <body>
