altered to fit style.css

--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
 <body>
 	<h1>Kayden Mimmack</h1>
 
-	<img src="portrait.png" alt="Portrait of Self" />
+	<div id="container">
+		<div id="lblock">
+			<img src="portrait.png" alt="Portrait of Self" />
+		</div>
 
-	<p> 
-		<a href="resume.html">Resume</a>
-	</p>
-
-	<p> 
-		<a href="bio.html">Biography</a>
-	</p>
+		<div id="rblock">
+			<p> <a href="resume.html">Resume</a> </p>
+			<p> <a href="bio.html">Biography</a> </p>
+		</div>
+	</div>
 
 </body>
 
