sidebar description update

--- a/index.html
+++ b/index.html
@@ -35,19 +35,20 @@
                         <div id="circle"></div>
                         <p style="max-width:85%;">
                             <br>
-                            Kayden Mimmack is a second-year Tufts University student seeking his degree in
-                            Mathematics and Computer Science. He is currently a designer and multimedia director
-                            for the student-run Tufts Observer
-                            magazine.
-                            <br>
-                            <br>
-                            Contact at:<br>Kayden.Mimmack@tufts.edu
+                            Kayden Mimmack is a second-year Tufts University student majoring in
+                            Math and Computer Science. He is a designer and multimedia director
+                            for the student-run Tufts Observer magazine.
                             <br>
                             <br>
                             <a class="sideBttn" href="#graphics">Graphic Design</a>
                             <br>
                             <br>
                             <a class="sideBttn" href="#web">Web Development</a>
+                            <br>
+                            <br>
+                            Contact at:
+                            <br>
+                            <a href="mailto:Kayden.Mimmack@tufts.edu">Kayden.Mimmack@tufts.edu</a>
                         </p>
                     </div>
                 </div>
