--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/index.css">
     <title>Kayden Mimmack</title>
 </head>
-<body>
+<body id="skrollr-body">
     <div id="bgimg">
         <div class="inner">
             <h1>Kayden Mimmack</h1>
@@ -40,10 +40,10 @@
                             for the student-run Tufts Observer magazine.
                             <br>
                             <br>
-                            <a class="sideBttn" href="#graphics">Graphic Design</a>
+                            <a class="sideBttn" href="#graphics">Design Work</a>
                             <br>
                             <br>
-                            <a class="sideBttn" href="#web">Web Development</a>
+                            <a class="sideBttn" href="#web">Web Work</a>
                             <br>
                             <br>
                             Contact at:
@@ -108,6 +108,21 @@
     <script>
         skrollr.init();
         $("body").fadeIn("slow");
+
+        $(function() {
+          $('a[href*="#"]:not([href="#"])').click(function() {
+            if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+              var target = $(this.hash);
+              target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+              if (target.length) {
+                $('html, body').animate({
+                  scrollTop: target.offset().top
+                }, 1000);
+                return false;
+              }
+            }
+          });
+        });
 /*
 
         $(window).on("scroll", function() {
