--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/index.css">
     <title>Kayden Mimmack</title>
 </head>
-<body id="skrollr-body">
+<body>
     <div id="bgimg">
         <div class="inner">
             <h1>Kayden Mimmack</h1>
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <!-- right-aligned all content -->
-            <div class="col-sm-9" id="all-content">
+            <div class="col-sm-9" id="all-content" id="skrollr-body">
                 <div id="graphics"
                 data-50p="opacity:0;"
                 data-100p="opacity:1;">
