Added descriptions, css fixes

--- a/index.html
+++ b/index.html
@@ -13,13 +13,6 @@
         <div class="inner">
             <h1>Kayden Mimmack</h1>
             <h3>UI / UX Design and Front-End Web Development</h3>
-            <!--<div class="buttonList">
-                <a href="#sidebar"><div class="button">Info</div></a>
-                <div class="divider"></div>
-                <a href="#graphics"><div class="button">Graphic Design</div></a>
-                <div class="divider"></div>
-                <a href="#web"><div class="button">Web Design</div></a>
-            </div>-->
         </div>
     </div>
 
@@ -55,42 +48,133 @@
             <div class="col-sm-9" id="all-content">
                 <div id="graphics">
                     <h2>Graphic Design</h2>
-                    <div id="test" style="display:none;position:absolute;"></div>
+                    <br>
                     <a href="img/anatomy.jpg" target="_blank">
-                        <img class="graphic" alt="" src="img/anatomy.jpg"></img>
+                        <img class="graphic" alt="Magazine Spread 1" src="img/anatomy.jpg"></img>
                     </a>
+                    <p class="description">
+                        Spread designed for the Tufts Observer created using Adobe
+                        InDesign. Art of person on lefthand page was created by Rachel
+                        Cunningham, while graphics on righthand page and title design
+                        were created by myself.
+                    </p>
+
                     <a href="img/faceless.jpg" target="_blank">
-                        <img class="graphic" alt="" src="img/faceless.jpg"></img>
+                        <img class="graphic" alt="Magazine Spread 2" src="img/faceless.jpg"></img>
                     </a>
+                    <p class="description">
+                        Spread designed for the Tufts Observer created using Adobe
+                        InDesign. Art provided by Annie Roome.
+                    </p>
 
                     <a href="img/safezone.png" target="_blank">
                         <img class="graphic" alt="" src="img/safezone.png"></img>
                     </a>
+                    <p class="description">
+                        Promotional flyer created for Chapel Hill High School's
+                        Queer-Straight Alliance using GIMP.
+                        <br>
+                        Example highlights color usage and computer graphics creation.
+                    </p>
+
                     <a href="img/jpn.png" target="_blank">
                         <img class="graphic vertical" alt="" src="img/jpn.png"></img>
                     </a>
+                    <p class="description">
+                        Promotional flyer created for Chapel Hill High School's
+                        Japanese Tutoring Club using GIMP.
+                        <br>
+                        Example highlights typography usage and imagery-oriented design.
+                    </p>
+
                     <a href="img/salesman.png" target="_blank">
                         <img class="graphic" alt="" src="img/salesman.png"></img>
                     </a>
+                    <p class="description">
+                        Promotional image for musical event created using GIMP.
+                        Example highlights computer graphics creation.
+                    </p>
+
                     <a href="img/plants.png" target="_blank">
                         <img class="graphic" alt="" src="img/plants.png"></img>
                     </a>
+                    <p class="description">
+                        Promotional image for house show created using GIMP.
+                        Space for location intentionally left blank to be filled
+                        in at later date by client. Illustrated by hand and colored
+                        using GIMP.
+                    </p>
+
                     <a href="img/isce.png" target="_blank">
                         <img class="graphic vertical" alt="" src="img/isce.png"></img>
                     </a>
+                    <p class="description">
+                        Logo for Tufts University's Summer English Language Programs
+                        collaboration with Taipei's Wego High School and ISCE.
+                        Design featured on program T-Shirts and memorial plaque.
+                        Created using Adobe Photoshop and Illustrator.
+                    </p>
+
                 </div>
                 <div id="web">
                     <hr><br><br>
-                    <h2>Web Development</h2>
-                    <a href="img/quiz.jpg" target="_blank">
-                        <img class="graphic" alt="" src="img/quiz.jpg"></img>
-                    </a>
-                    <a href="img/fetch.jpg" target="_blank">
-                        <img class="graphic" alt="" src="img/fetch.jpg"></img>
-                    </a>
+                    <h2 id="webTitle">Web Development</h2>
                     <a href="img/observer.jpg" target="_blank">
                         <img class="graphic" alt="" src="img/observer.jpg"></img>
                     </a>
+                    <p class="description">
+                        Webfographic created for Tufts Observer's long-distance
+                        relationship survey. Utilizes skrollr.js and CSS animations
+                        for a more dynamic viewing experience.
+                        <br><br>
+                        Live: <a class="sideBttn" href="http://tuftsobserver.org/multimedia/longdistance/">
+                            tuftsobserver.org/multimedia/longdistance</a>
+                        <br>
+                        Source: <a class="sideBttn" href="https://github.com/mimmackk/LDR-Infographic">
+                            github.com/mimmackk/LDR-Infographic</a>
+                    </p>
+
+                    <a href="img/quiz.jpg" target="_blank">
+                        <img class="graphic" alt="" src="img/quiz.jpg"></img>
+                    </a>
+                    <p class="description">
+                        Group collaboration for Web Development class - musical personality
+                        quiz which builds a song in the background based on user's
+                        answers in real time. Built using JQuery, Ajax, Node.js, Heroku,
+                        MongoDB, Chart.js, and Bootstrap. Created on deadline;
+                        some aspects of website, such as geolocation usage, do not
+                        perform perfectly. My contributions focused in the area of
+                        JQuery, Ajax, Chart.js, and Bootstrap.
+                        <br><br>
+                        Live: <a class="sideBttn" href="http://mimmackk.github.io/comp20-semesterproject/">
+                            mimmackk.github.io/comp20-semesterproject</a>
+                        <br>
+                        Source: <a class="sideBttn" href="https://github.com/mimmackk/comp20-semesterproject">
+                            github.com/mimmackk/comp20-semesterproject</a>
+                    </p>
+
+                    <a href="img/fetch.jpg" target="_blank">
+                        <img class="graphic" alt="" src="img/fetch.jpg"></img>
+                    </a>
+                    <p class="description">
+                        Personal project currently in development - screen scraper and
+                        read-it-later tool optimized for online short fiction as
+                        opposed to news articles. Chrome extension and connected webpage
+                        (currently operational) collect and extract information from
+                        webpage and save in a document to Google Drive. Reader not yet
+                        implemented. Uses Chrome extension, JQuery, Countable.js,
+                        TRUMBOWYG text editor, Google Drive API, and Bootstrap.
+                        See more info on GitHub.
+                        <br><br>
+                        Live: <a class="sideBttn" href="http://mimmackk.github.io/fetchFF/fetch">
+                            mimmackk.github.io/fetchFF/fetch</a>
+                        <br>
+                        Source: <a class="sideBttn" href="https://github.com/mimmackk/fetchFF">
+                            github.com/mimmackk/fetchFF</a>
+                    </p>
+                    <br>
+                    <br>
+                    <h3>See more examples of code on <a class="sideBttn" href="http://github.com/mimmackk">GitHub</a></h3>
                 </div>
             </div>
         </div>
@@ -101,43 +185,35 @@
     <script>
         $("body").fadeIn("slow");
 
+        /*smooth scrolling on anchor click */
         $(function() {
-          $('a[href*="#"]:not([href="#"])').click(function() {
-            if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
-              var target = $(this.hash);
-              target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
-              if (target.length) {
-                $('html, body').animate({
-                  scrollTop: target.offset().top
-                }, 1000);
-                return false;
-              }
-            }
-          });
+            $('a[href*="#"]:not([href="#"])').click(function() {
+                if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+                    var target = $(this.hash);
+                    target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+                    if (target.length) {
+                        $('html, body').animate({
+                            scrollTop: target.offset().top
+                        }, 1000);
+                        return false;
+                    }
+                }
+            });
         });
 
-
-
+        /*fade in sidebar on scroll */
         $(window).scroll(function() {
-        if ($(this).scrollTop()> $( window ).height()) {
-            $('#sidebar').fadeIn();
-        } else {
-            $('#sidebar').fadeOut();
-        }
-        });
-/*
-
-        $(window).on("scroll", function() {
-            var scrollPosition = scrollY || pageYOffset;
-            var tst = $("#test").position().top - scrollPosition;
-            console.log("Test: " + $("#test").position().top + " Scrollpos: " + scrollPosition
-        + " Diff: " + tst);*/
-            //console.log($("#test").position().top + " window: " + $(window).height());
-            /*if (scrollPosition > $("#graphics").position().top - (2 * $(window).height())) {
-                console.log("run code here");
+            if ($(window).width() > 768) {
+                if ($(this).scrollTop() > $(window).height()) {
+                    $('#sidebar').fadeIn();
+                } else {
+                    $('#sidebar').fadeOut();
+                }
             }
-        });*/
-
+            else {
+                $('#webTitle').html("Web Dev")
+            }
+        });
     </script>
 </body>
 </html>
