--- a/index.html
+++ b/index.html
@@ -159,10 +159,7 @@
                     <p class="description">
                         Personal project currently in development - screen scraper and
                         read-it-later tool optimized for online short fiction as
-                        opposed to news articles. Chrome extension and connected webpage
-                        (currently operational) collect and extract information from
-                        webpage and save in a document to Google Drive. Reader not yet
-                        implemented. Uses Chrome extension, JQuery, Countable.js,
+                        opposed to news articles. Uses Chrome extension, JQuery, Countable.js,
                         TRUMBOWYG text editor, Google Drive API, and Bootstrap.
                         See more info on GitHub.
                         <br><br>
@@ -174,7 +171,7 @@
                     </p>
                     <br>
                     <br>
-                    <h3>See more examples of code on <a class="sideBttn" href="http://github.com/mimmackk">GitHub</a></h3>
+                    <h3>See more examples of my code on <a class="sideBttn" href="http://github.com/mimmackk">GitHub</a></h3>
                 </div>
             </div>
         </div>
@@ -183,8 +180,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script>
-        $("body").fadeIn("slow");
-
         /*smooth scrolling on anchor click */
         $(function() {
             $('a[href*="#"]:not([href="#"])').click(function() {
@@ -200,6 +195,12 @@
                 }
             });
         });
+        if ($(window).width() > 768) {
+            $("body").fadeIn("slow");
+        }
+        else {
+            $("body").show();
+        }
 
         /*fade in sidebar on scroll */
         $(window).scroll(function() {
