--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <img class="graphic" alt="" src="img/plants.png"></img>
                     </a>
                     <p class="description">
-                        Promotional image for house show created using GIMP.
+                        Promotional image for house show.
                         Space for location intentionally left blank to be filled
                         in at later date by client. Illustrated by hand and colored
                         using GIMP.
@@ -109,9 +109,9 @@
                         <img class="graphic vertical" alt="" src="img/isce.png"></img>
                     </a>
                     <p class="description">
-                        Logo for Tufts University's Summer English Language Programs
+                        Logo for Tufts University's Summer English Language Program's
                         collaboration with Taipei's Wego High School and ISCE.
-                        Design featured on program T-Shirts and memorial plaque.
+                        Design featured on program shirts and memorial plaque.
                         Created using Adobe Photoshop and Illustrator.
                     </p>
 
@@ -123,7 +123,7 @@
                         <img class="graphic" alt="" src="img/observer.jpg"></img>
                     </a>
                     <p class="description">
-                        Webfographic created for Tufts Observer's long-distance
+                        Webfographic created for the Tufts Observer's long-distance
                         relationship survey. Utilizes skrollr.js and CSS animations
                         for a more dynamic viewing experience.
                         <br><br>
